un-hide the edit button for admins

--- a/sites/all/themes/msd2014/css/msd2014-extra.css
+++ b/sites/all/themes/msd2014/css/msd2014-extra.css
@@ -700,6 +700,10 @@ a#ui-id-4.ui-tabs-anchor span {
   padding: 0!important;
 }
 
+.content #tabs [role="tabpanel"].with-related-items .tabs {
+  margin-top: -40px;
+}
+
 .content #tabs [role="tabpanel"].with-related-items .programs-module a {
   text-decoration: none;
 }
