--- a/sites/all/themes/msd2014/css/msd2014.css
+++ b/sites/all/themes/msd2014/css/msd2014.css
@@ -460,25 +460,32 @@ a.bpause:hover {
   width: 20%;
 }
 
+.social-media-wrap .social-medias li a,
+.social-media-wrap .social-medias li a:before,
+.social-media-wrap .social-medias li a:after {
+  background-position: 10px center;
+  background-repeat: no-repeat;
+  background-size: 22px;
+  transition: all 300ms;
+}
+
 .social-media-wrap .social-medias li a {
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
-  background-position: 10px center;
   background-color: #1F1F1F;
-  background-repeat: no-repeat;
-  background-size: 22px;
   box-sizing: border-box;
-  display: block;
   color: #B2B2B2;
+  display: block;
   line-height: 44px;
   margin-bottom: 8px;
   margin-left: 8px;
   margin-right: 8px;
   margin-top: 12px;
+  overflow: hidden;
+  position: relative;
   padding-left: 41px;
   padding-top: 5px;
-  transition: all 300ms;
 } 
 
 .social-media-wrap li a:hover {
@@ -535,15 +542,33 @@ a.bpause:hover {
   background-color: #0077B5;
 }
 
-.social-media-wrap li a.instagram {
-  background: url(../images/instagram-new.png) 8px center no-repeat / 28px, transparent;
-  background: url(../images/instagram-new.svg) 8px center no-repeat / 28px, transparent;
+.social-media-wrap li a.instagram:before,
+.social-media-wrap li a.instagram:after {
+  bottom: 0;
+  content: " ";
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.social-media-wrap li a.instagram:before {
+  background-position: center;
+  background-size: cover;
+  z-index: -1;
+}
+
+.social-media-wrap li a.instagram:after {
+  background-image: url(../images/instagram-new.png);
+  background-image: url(../images/instagram-new.svg);
 }
 
 .social-media-wrap li a.instagram:hover {
-  background-color: #d83578;
-  background: url(../images/instagram-new.png) 8px center no-repeat / 28px, -webkit-radial-gradient(0 100%, #f47d3f 10%,#e518a1 70%,#a545b9 100%);
-  background: url(../images/instagram-new.svg) 8px center no-repeat / 28px, -webkit-radial-gradient(0 100%, #f47d3f 10%,#e518a1 70%,#a545b9 100%);
+  background-color: #d83578; /* fallback pink */
+}
+
+.social-media-wrap li a.instagram:hover:before {
+  background-image: -webkit-radial-gradient(0 100%,#f47d3f 10%,#e518a1 70%,#a545b9 100%);
 }
 
 .social-media-wrap li a.pinterest {
@@ -563,7 +588,6 @@ a.bpause:hover {
   font-family: "helvetica-nue",sans-serif;
   font-size: 1.5em;
   color: #fff;
-}
 }
 
 .module-wrap:hover img, .module-wrap:hover video {
